packages/moonstone/VirtualList/VirtualListBase.less
.virtualList {
	--virtuallist-item-width: initial;
	--virtuallist-item-height: initial;
	--virtuallist-item-flex-box: 1 0 auto;

	.listItemContainer {
		display: flex;
		position: absolute;
		overflow: hidden;

		will-change: transform;

		&.fitWidth {
			width: 100%;
		}
		&.fitHeight {
			height: 100%;
		}
	}

	div.listItemContainer > * {
		width: var(--virtuallist-item-width);
		height: var(--virtuallist-item-height);
		flex: var(--virtuallist-item-flex-box);
		padding: 0;
		overflow: hidden;
	}

	// For VirtualListNative
	&.vertical {
		overflow-x: hidden;
		overflow-y: scroll;
	}

	&.horizontal {
		overflow-x: scroll;
		overflow-y: hidden;
	}

	&::-webkit-scrollbar {
		display: none;
	}
}

